--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "rxjs": "5.5.6",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.20"
+    "zone.js": "0.8.20",
+    "underscore": "1.7.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.7",
